<resources>
    <string name="app_name">Nagare</string>
    <string name="temu_lurah">Temu Lurah</string>
    <string name="keliling">Keliling</string>
    <string name="lapor">Lapor</string>
    <string name="calendar">Acara</string>
    <string name="lokasi">Fasilitas</string>
    <string name="galang_dana">Galang Dana</string>
    <string name="stub_1">Stub 1</string>
    <string name="stub_2">Sign Up</string>
    <string name="title_activity_sign_up">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="username">Username: </string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="not_have_account">Doesn\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tagline">Didedikasikan untuk keamanan, kenyamanan, dan kesejahteraan kelurahan</string>
    <string name="email">Email:</string>
    <string name="password_confirm">Confirm:</string>

    <!-- Strings related to sharedElement-->
    <string name="tn_nagare_logo">tn_nagare_logo</string>
    <string name="tn_sign_up">tn_sign_up</string>
    <string name="tn_login">tn_login</string>
    <string name="tn_email_field">tn_email_field</string>
    <string name="tn_password_field">tn_password_field</string>
    <string name="tn_btn_auth">tn_btn_auth</string>
    <string name="full_name">Full Name:</string>
    <string name="loading">Loading...</string>


    <!-- Strings related to Navigation Header-->
    <string name="nav_header_title">NamaSementara</string>
    <string name="nav_header_subtitle">NamaSementara@IFest.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="peta">Peta</string>
    <string name="kalender">Kalender</string>
    <string name="tn_selected_lokasi">tn_selected_fasilitas</string>
    <string name="tn_selected_acara">tn_selected_acara</string>
    <string name="tn_selected_galang_dana">tn_created_galan_dana</string>
    <string name="fasilitas">Fasilitas</string>
</resources>
