<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".auth.LoginActivity"
    android:noHistory="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_nagare_logo"
                android:transitionName="@string/tn_nagare_logo"
                android:scaleType="centerCrop"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:text="@string/login"
                android:id="@+id/tv_login"
                android:transitionName="@string/tn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:layout_toEndOf="@id/iv_nagare_logo"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:text="@string/sign_up"
                android:transitionName="@string/tn_sign_up"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/tv_login"
                android:onClick="onSignUpClick"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_email_field"
                android:transitionName="@string/tn_email_field"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password_field"
                android:transitionName="@string/tn_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:transitionName="@string/tn_btn_auth"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:onClick="onLoginButtonClick"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_progress_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center">

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"/>

            <TextView
                android:text="@string/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>