<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Signup form container-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <!-- Nagare logo and sign up text-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_nagare_logo"
                android:transitionName="@string/tn_nagare_logo"
                android:scaleType="centerCrop"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:text="@string/sign_up"
                android:transitionName="@string/tn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:layout_toEndOf="@id/iv_nagare_logo"/>

            <TextView
                android:id="@+id/tv_login"
                android:text="@string/login"
                android:transitionName="@string/tn_login"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/tv_sign_up"/>

        </RelativeLayout>

        <!-- sign up form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- full name field -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/full_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Email field-->
            <LinearLayout
                android:id="@+id/ll_email_field"
                android:transitionName="@string/tn_email_field"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Password field -->
            <LinearLayout
                android:id="@+id/ll_password_field"
                android:transitionName="@string/tn_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- Confirm field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/password_confirm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:inputType="textPassword"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- Sign up button -->
            <Button
                android:id="@+id/btn_sign_up"
                android:text="@string/sign_up"
                android:transitionName="@string/tn_btn_auth"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>